--- a/FileFlux/Pages/DownloadItemTemplate.xaml
+++ b/FileFlux/Pages/DownloadItemTemplate.xaml
@@ -4,19 +4,10 @@
 			 xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
 			 xmlns:model="clr-namespace:FileFlux.Model"
 			 xmlns:local="clr-namespace:FileFlux"			 
+			 xmlns:pages="clr-namespace:FileFlux.Pages"
              x:Class="FileFlux.Pages.DownloadItemTemplate">
 
 	<ContentView.Resources>
-		<FontImageSource FontFamily="FAS" Size="64" Glyph="&#xf15b;" Color="{DynamicResource PrimaryColor}" x:Key="FileGenericGlph" />
-		<FontImageSource FontFamily="FAS" Size="64" Glyph="&#xf1c7;" Color="{DynamicResource PrimaryColor}" x:Key="FileAudioGlyph" />
-		<FontImageSource FontFamily="FAS" Size="64" Glyph="&#xf1c8;" Color="{DynamicResource PrimaryColor}" x:Key="FileVideoGlyph" />
-		<FontImageSource FontFamily="FAS" Size="64" Glyph="&#xf1c6;" Color="{DynamicResource PrimaryColor}" x:Key="FileArchiveGlyph" />
-		<FontImageSource FontFamily="FAS" Size="64" Glyph="&#xf1c5;" Color="{DynamicResource PrimaryColor}" x:Key="FileImageGlyph" />
-		<FontImageSource FontFamily="FAS" Size="64" Glyph="&#xf1c2;" Color="{DynamicResource PrimaryColor}" x:Key="FileWordGlyph" />
-		<FontImageSource FontFamily="FAS" Size="64" Glyph="&#xf1c3;" Color="{DynamicResource PrimaryColor}" x:Key="FileExcelGlyph" />
-		<FontImageSource FontFamily="FAS" Size="64" Glyph="&#xf1c4;" Color="{DynamicResource PrimaryColor}" x:Key="FilePowerPointGlyph" />
-		<FontImageSource FontFamily="FAS" Size="64" Glyph="&#xf1c1;" Color="{DynamicResource PrimaryColor}" x:Key="FilePdfGlyph" />
-		<FontImageSource FontFamily="FAS" Size="64" Glyph="&#xf15c;" Color="{DynamicResource PrimaryColor}" x:Key="FileTextGlyph" />
 		<FontImageSource FontFamily="FAS" Size="18" Glyph="&#xf04c;" Color="{DynamicResource PrimaryColor}" x:Key="PauseGlyph" />
 		<FontImageSource FontFamily="FAS" Size="18" Glyph="&#xf04b;" Color="{DynamicResource PrimaryColor}" x:Key="ResumeGlyph" />
 		<local:FileSizeConverter x:Key="FileSizeConverter" />
@@ -41,22 +32,7 @@
 			<ColumnDefinition Width="*" />
 			<ColumnDefinition Width="Auto"/>
 		</Grid.ColumnDefinitions>
-		<Image Grid.Column="0" Source="{StaticResource Key=FileGenericGlph}">
-			<Image.Triggers>
-				<DataTrigger Binding="{Binding Type}" TargetType="Image" Value="audio">
-					<Setter Property="Source" Value="{StaticResource Key='FileAudioGlyph'}" />
-				</DataTrigger>
-				<DataTrigger Binding="{Binding Type}" TargetType="Image" Value="image">
-					<Setter Property="Source" Value="{StaticResource Key=FileImageGlyph}" />
-				</DataTrigger>
-				<DataTrigger Binding="{Binding Type}" TargetType="Image" Value="video">
-					<Setter Property="Source" Value="{StaticResource Key=FileVideoGlyph}" />
-				</DataTrigger>
-				<DataTrigger Binding="{Binding Type}" TargetType="Image" Value="text">
-					<Setter Property="Source" Value="{StaticResource Key=FileTextGlyph}" />
-				</DataTrigger>
-			</Image.Triggers>
-		</Image>
+		<pages:FileTypeIcon Grid.Column="0" x:Name="FileIcon" BindingContext="{Binding .}" MaximumHeightRequest="64" HeightRequest="64"/>
 		<VerticalStackLayout Grid.Column="1" HorizontalOptions="Start">
 			<Label Text="{Binding FileName}" FontSize="Small" />
 			<Label Text="{Binding Status, Converter={StaticResource StatusConverter}, StringFormat='Status: {0}'}" FontSize="Micro">
@@ -94,7 +70,7 @@
 				<ImageButton.Source>
 					<FontImageSource FontFamily="FAS" Size="18" Glyph="&#xf05e;" Color="DarkRed"/>
 				</ImageButton.Source>
-			</ImageButton>			
+			</ImageButton>
 			<ImageButton BackgroundColor="Transparent"
 						 BorderWidth="0"
 						 Command="{Binding Source={RelativeSource AncestorType={x:Type local:DownloadsPage}}, Path=BindingContext.ToggleDownloadStatus}"
