--- a/FileFlux/Pages/NewDownloadPage.xaml
+++ b/FileFlux/Pages/NewDownloadPage.xaml
@@ -9,6 +9,7 @@
 			 xmlns:viewmodel="clr-namespace:FileFlux.ViewModel"
 			 x:DataType="viewmodel:NewDownloadViewModel"
 			 xmlns:model="clr-namespace:FileFlux.Model"
+			 xmlns:pages="clr-namespace:FileFlux.Pages"
 			 Title="New Download - FileFlux">
 	<ContentPage.Resources>
 		<local:FileSizeConverter x:Key="FileSizeConverter" />
@@ -16,7 +17,7 @@
 		<local:StatusConverter x:Key="StatusConverter" />
 	</ContentPage.Resources>
 
-	<Grid ColumnSpacing="10" RowSpacing="10" Padding="10">
+	<Grid ColumnSpacing="20" RowSpacing="20" Padding="20">
 		<Grid.RowDefinitions>
 			<RowDefinition Height="Auto"/>
 			<RowDefinition Height="Auto"/>
@@ -25,31 +26,37 @@
 			<RowDefinition Height="48"/>
 		</Grid.RowDefinitions>
 		<Grid.ColumnDefinitions>
-			<ColumnDefinition Width="*"/>
+			<ColumnDefinition Width="48" />
+			<ColumnDefinition Width="*" />
 		</Grid.ColumnDefinitions>
-		<Label Text="New Download" FontSize="Medium" Grid.Row="0"/>
-
-		<HorizontalStackLayout Grid.Row="1" Spacing="10" VerticalOptions="Center">
+		<Label Text="New Download" FontSize="Medium" Grid.Row="0" Grid.ColumnSpan="2" />
+		<Grid Grid.Row="1" Grid.ColumnSpan="2" ColumnSpacing="10">
+			<Grid.ColumnDefinitions>
+				<ColumnDefinition Width="Auto" />
+				<ColumnDefinition Width="Auto" />
+				<ColumnDefinition Width="*" />
+			</Grid.ColumnDefinitions>
 			<Label Text="Address:" VerticalOptions="Center"/>
-			<Entry Grid.Column="1" HorizontalOptions="FillAndExpand" VerticalOptions="Center" Text="{Binding Url}" MinimumWidthRequest="450" Placeholder="Download Url" MaximumWidthRequest="500">
+			<Entry Grid.Column="1" VerticalOptions="Center" Text="{Binding Url}" WidthRequest="450" Placeholder="Download Url">
 				<Entry.Behaviors>
 					<toolkit:UriValidationBehavior Flags="ValidateOnValueChanged" UriKind="Absolute" x:Name="uriValidationBehavior" />
 				</Entry.Behaviors>
 			</Entry>
-			<Button Text="Get" Command="{Binding GetFileCommand}" IsEnabled="False">
+			<Button Text="Get" Command="{Binding GetFileCommand}" IsEnabled="False" Grid.Column="3" HorizontalOptions="Start" VerticalOptions="Center">
 				<Button.Triggers>
 					<DataTrigger TargetType="Button" Binding="{Binding Source={x:Reference uriValidationBehavior}, Path=IsValid}" Value="True">
 						<Setter Property="IsEnabled" Value="True"/>
 					</DataTrigger>
 				</Button.Triggers>
 			</Button>
-		</HorizontalStackLayout>
+		</Grid>
+		<HorizontalStackLayout Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="2" Spacing="32" HorizontalOptions="Fill">
+			<pages:FileTypeIcon x:Name="FileIcon" BindingContext="{Binding FileDownload}" MaximumWidthRequest="128"/>
 
-		<Border Grid.Row="2" Stroke="{DynamicResource PrimaryColor}" BackgroundColor="Transparent" Padding="10">
-			<VerticalStackLayout Spacing="10">
+			<VerticalStackLayout Spacing="10" >
 				<Label Text="File Details" FontSize="Caption"/>
 				<Label Text="{Binding FileDownload.FileName, StringFormat='File Name: {0}', TargetNullValue='Filename: unknown'}" FontSize="Small"/>
-				<Label Text="{Binding FileDownload.ContentType, StringFormat='Type: {0}'}" FontSize="Micro"/>
+				<Label Text="{Binding FileDownload.ContentCategory, StringFormat='Type: {0}'}" FontSize="Micro"/>
 				<Label Text="{Binding FileDownload.TotalBytes, Converter={StaticResource FileSizeConverter}, StringFormat='Size: {0}'}" FontSize="Micro" />
 				<Label Text="{Binding FileDownload.SupportsResume, Converter={StaticResource YesNoConverter}, StringFormat='Supports Resume: {0}'}" FontSize="Micro">
 					<Label.Triggers>
@@ -58,20 +65,30 @@
 						</DataTrigger>
 					</Label.Triggers>
 				</Label>
-				<Label Text="{Binding FileDownload.Status, Converter={StaticResource StatusConverter}, StringFormat='Status: {0}'}" FontSize="Micro" />
+				<Label Text="{Binding FileDownload.Status, Converter={StaticResource StatusConverter}, StringFormat='Status: {0}'}" FontSize="Micro">
+					<Label.Triggers>
+					<DataTrigger TargetType="Label" Binding="{Binding Status}" Value="{x:Static model:FileDownloadStatuses.Failed}">
+						<Setter Property="TextColor" Value="{AppThemeBinding Light=DarkRed, Dark=Red}"/>
+					</DataTrigger>
+					<DataTrigger TargetType="Label" Binding="{Binding Status}" Value="{x:Static model:FileDownloadStatuses.Measuring}">
+						<Setter Property="TextColor" Value="{AppThemeBinding Light=Orange, Dark=Orange}"/>
+					</DataTrigger>
+					</Label.Triggers>
+				</Label>
 				<Label Text="{Binding ErrorMessage, StringFormat='ErrorMessage:{0}'}" FontSize="Micro" TextColor="MediumVioletRed" IsVisible="Collapse" x:Name="ErrorLabel" />
 			</VerticalStackLayout>
-		</Border>
+		</HorizontalStackLayout>
 
-		<HorizontalStackLayout Grid.Row="4" Spacing="10" HorizontalOptions="End">
-			<Button Text="Start" Command="{Binding StartCommand}" IsEnabled="False">
+
+		<HorizontalStackLayout Grid.Row="4" Grid.ColumnSpan="2" Spacing="10" HorizontalOptions="End" VerticalOptions="Center">
+			<Button Text="Start" Command="{Binding StartCommand}" IsEnabled="False" VerticalOptions="Center">
 				<Button.Triggers>
 					<DataTrigger TargetType="Button" Binding="{Binding Source={x:Reference newDownloadPage}, Path=BindingContext.FileDownload.Status}" Value="{x:Static model:FileDownloadStatuses.Pending}">
 						<Setter Property="IsEnabled" Value="True"/>
 					</DataTrigger>
 				</Button.Triggers>
 			</Button>
-			<Button Text="Cancel" Command="{Binding CancelCommand}"/>
+			<Button Text="Cancel" Command="{Binding CancelCommand}" VerticalOptions="Center"/>
 		</HorizontalStackLayout>
 	</Grid>
 </ContentPage>
